--- a/ProjetoBRQ/ProjetoBRQ/Web.config
+++ b/ProjetoBRQ/ProjetoBRQ/Web.config
@@ -11,7 +11,7 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-ProjetoBRQ-20170902034955.mdf;Initial Catalog=aspnet-ProjetoBRQ-20170902034955;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="DbBRQ" providerName="Oracle.ManagedDataAccess.Client" connectionString="User Id=;Password=;Data Source=oracle" />
+    <add name="DbBRQ" providerName="Oracle.ManagedDataAccess.Client" connectionString="User Id=rm73879;Password=110797;Data Source=oracle" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -55,7 +55,7 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Newtonsoft.Json" culture="neutral" publicKeyToken="30ad4fe6b2a6aeed" />
-        <bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-10.0.0.0" newVersion="10.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Optimization" publicKeyToken="31bf3856ad364e35" />
