--- a/ProjetoBRQ/ProjetoBRQ/ProjetoBRQ.csproj
+++ b/ProjetoBRQ/ProjetoBRQ/ProjetoBRQ.csproj
@@ -194,13 +194,17 @@
     <Compile Include="App_Start\IdentityConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
+    <Compile Include="Business\ClienteBusiness.cs" />
     <Compile Include="Business\ImgNewsBusiness.cs" />
     <Compile Include="Business\NewsBusiness.cs" />
     <Compile Include="Context\DbBRQ.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\ClientesController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Controllers\NewsController.cs" />
+    <Compile Include="Models\Cliente.cs" />
+    <Compile Include="Repository\ClientesRepository.cs" />
     <Compile Include="Repository\ImgNewsRepository.cs" />
     <Compile Include="Repository\NewsRepository.cs" />
     <Compile Include="Global.asax.cs">
@@ -213,6 +217,7 @@
     <Compile Include="Models\News.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
+    <Compile Include="Utils\StringUtils.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
@@ -277,6 +282,10 @@
     <Content Include="Views\News\Details.cshtml" />
     <Content Include="Views\News\Edit.cshtml" />
     <Content Include="Views\News\Preview.cshtml" />
+    <Content Include="Views\Clientes\Create.cshtml" />
+    <Content Include="Views\Clientes\Details.cshtml" />
+    <Content Include="Views\Clientes\Edit.cshtml" />
+    <Content Include="Views\Clientes\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
