--- a/ProjetoBRQ/ProjetoBRQ/ProjetoBRQ.csproj
+++ b/ProjetoBRQ/ProjetoBRQ/ProjetoBRQ.csproj
@@ -198,19 +198,24 @@
     <Compile Include="Business\ClienteBusiness.cs" />
     <Compile Include="Business\ContatosBusiness.cs" />
     <Compile Include="Business\ImgNewsBusiness.cs" />
+    <Compile Include="Business\InvestmentBusiness.cs" />
     <Compile Include="Business\NewsBusiness.cs" />
     <Compile Include="Context\DbBRQ.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\ClientesController.cs" />
     <Compile Include="Controllers\ContatosController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\InvestimentController.cs" />
+    <Compile Include="Models\Investiment.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Controllers\NewsController.cs" />
+    <Compile Include="Interface\OperationBD.cs" />
     <Compile Include="Models\Cliente.cs" />
     <Compile Include="Models\Contatos.cs" />
     <Compile Include="Repository\ClientesRepository.cs" />
     <Compile Include="Repository\ContatosRepository.cs" />
     <Compile Include="Repository\ImgNewsRepository.cs" />
+    <Compile Include="Repository\InvestmentRepository.cs" />
     <Compile Include="Repository\NewsRepository.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -227,10 +232,6 @@
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
-    <Content Include="Content\materialize\css\materialize.css" />
-    <Content Include="Content\materialize\css\materialize.min.css" />
-    <Content Include="Content\materialize\font\material-design-icons\LICENSE.txt" />
-    <Content Include="Content\materialize\font\material-design-icons\Material-Design-Icons.svg" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
@@ -241,50 +242,6 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include=".gitignore" />
-    <Content Include="Content\materialize\font\roboto\Roboto-Thin.woff2" />
-    <Content Include="Content\materialize\font\roboto\Roboto-Thin.woff" />
-    <Content Include="Content\materialize\font\roboto\Roboto-Thin.ttf" />
-    <Content Include="Content\materialize\font\roboto\Roboto-Thin.eot" />
-    <Content Include="Content\materialize\font\roboto\Roboto-Regular.woff2" />
-    <Content Include="Content\materialize\font\roboto\Roboto-Regular.woff" />
-    <Content Include="Content\materialize\font\roboto\Roboto-Regular.ttf" />
-    <Content Include="Content\materialize\font\roboto\Roboto-Regular.eot" />
-    <Content Include="Content\materialize\font\roboto\Roboto-Medium.woff2" />
-    <Content Include="Content\materialize\font\roboto\Roboto-Medium.woff" />
-    <Content Include="Content\materialize\font\roboto\Roboto-Medium.ttf" />
-    <Content Include="Content\materialize\font\roboto\Roboto-Medium.eot" />
-    <Content Include="Content\materialize\font\roboto\Roboto-Light.woff2" />
-    <Content Include="Content\materialize\font\roboto\Roboto-Light.woff" />
-    <Content Include="Content\materialize\font\roboto\Roboto-Light.ttf" />
-    <Content Include="Content\materialize\font\roboto\Roboto-Light.eot" />
-    <Content Include="Content\materialize\font\roboto\Roboto-Bold.woff2" />
-    <Content Include="Content\materialize\font\roboto\Roboto-Bold.woff" />
-    <Content Include="Content\materialize\font\roboto\Roboto-Bold.ttf" />
-    <Content Include="Content\materialize\font\roboto\Roboto-Bold.eot" />
-    <Content Include="Content\materialize\font\material-design-icons\Material-Design-Icons.woff2" />
-    <Content Include="Content\materialize\font\material-design-icons\Material-Design-Icons.woff" />
-    <Content Include="Content\materialize\font\material-design-icons\Material-Design-Icons.ttf" />
-    <Content Include="Content\materialize\font\material-design-icons\Material-Design-Icons.eot" />
-    <Content Include="Content\materialize\fonts\roboto\Roboto-Thin.woff2" />
-    <Content Include="Content\materialize\fonts\roboto\Roboto-Thin.woff" />
-    <Content Include="Content\materialize\fonts\roboto\Roboto-Thin.ttf" />
-    <Content Include="Content\materialize\fonts\roboto\Roboto-Thin.eot" />
-    <Content Include="Content\materialize\fonts\roboto\Roboto-Regular.woff2" />
-    <Content Include="Content\materialize\fonts\roboto\Roboto-Regular.woff" />
-    <Content Include="Content\materialize\fonts\roboto\Roboto-Regular.ttf" />
-    <Content Include="Content\materialize\fonts\roboto\Roboto-Regular.eot" />
-    <Content Include="Content\materialize\fonts\roboto\Roboto-Medium.woff2" />
-    <Content Include="Content\materialize\fonts\roboto\Roboto-Medium.woff" />
-    <Content Include="Content\materialize\fonts\roboto\Roboto-Medium.ttf" />
-    <Content Include="Content\materialize\fonts\roboto\Roboto-Medium.eot" />
-    <Content Include="Content\materialize\fonts\roboto\Roboto-Light.woff2" />
-    <Content Include="Content\materialize\fonts\roboto\Roboto-Light.woff" />
-    <Content Include="Content\materialize\fonts\roboto\Roboto-Light.ttf" />
-    <Content Include="Content\materialize\fonts\roboto\Roboto-Light.eot" />
-    <Content Include="Content\materialize\fonts\roboto\Roboto-Bold.woff2" />
-    <Content Include="Content\materialize\fonts\roboto\Roboto-Bold.woff" />
-    <Content Include="Content\materialize\fonts\roboto\Roboto-Bold.ttf" />
-    <Content Include="Content\materialize\fonts\roboto\Roboto-Bold.eot" />
     <None Include="Scripts\jquery-2.1.1.intellisense.js" />
     <Content Include="Scripts\jquery-2.1.1.js" />
     <Content Include="Scripts\jquery-2.1.1.min.js" />
@@ -346,6 +303,10 @@
     <Content Include="Views\Contatos\Create.cshtml" />
     <Content Include="Views\Contatos\Edit.cshtml" />
     <Content Include="Views\Contatos\Details.cshtml" />
+    <Content Include="Views\Investiment\Create.cshtml" />
+    <Content Include="Views\Investiment\Details.cshtml" />
+    <Content Include="Views\Investiment\Edit.cshtml" />
+    <Content Include="Views\Investiment\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
