investimento usuario/web api

--- a/ProjetoBRQ/ProjetoBRQ/ProjetoBRQ.csproj
+++ b/ProjetoBRQ/ProjetoBRQ/ProjetoBRQ.csproj
@@ -62,12 +62,21 @@
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Net.Http.Formatting, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.AspNet.WebApi.Client.5.2.3\lib\net45\System.Net.Http.Formatting.dll</HintPath>
+    </Reference>
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data.DataSetExtensions" />
+    <Reference Include="System.Web.Http, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.AspNet.WebApi.Core.5.2.3\lib\net45\System.Web.Http.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Web.Http.WebHost, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.AspNet.WebApi.WebHost.5.2.3\lib\net45\System.Web.Http.WebHost.dll</HintPath>
+    </Reference>
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Web" />
     <Reference Include="System.Web.Extensions" />
@@ -195,9 +204,11 @@
     <Compile Include="App_Start\IdentityConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
+    <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Business\ClienteBusiness.cs" />
     <Compile Include="Business\ContatosBusiness.cs" />
     <Compile Include="Business\ImgNewsBusiness.cs" />
+    <Compile Include="Business\InvestimentUserBusiness.cs" />
     <Compile Include="Business\InvestmentBusiness.cs" />
     <Compile Include="Business\NewsBusiness.cs" />
     <Compile Include="Context\DbBRQ.cs" />
@@ -205,16 +216,20 @@
     <Compile Include="Controllers\ClientesController.cs" />
     <Compile Include="Controllers\ContatosController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\InvestimentAPIController.cs" />
     <Compile Include="Controllers\InvestimentController.cs" />
+    <Compile Include="Controllers\InvestimentUserController.cs" />
     <Compile Include="Models\Investiment.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Controllers\NewsController.cs" />
     <Compile Include="Interface\OperationBD.cs" />
     <Compile Include="Models\Cliente.cs" />
     <Compile Include="Models\Contatos.cs" />
+    <Compile Include="Models\InvestimentUser.cs" />
     <Compile Include="Repository\ClientesRepository.cs" />
     <Compile Include="Repository\ContatosRepository.cs" />
     <Compile Include="Repository\ImgNewsRepository.cs" />
+    <Compile Include="Repository\InvestimentUserRepository.cs" />
     <Compile Include="Repository\InvestmentRepository.cs" />
     <Compile Include="Repository\NewsRepository.cs" />
     <Compile Include="Global.asax.cs">
@@ -310,6 +325,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Views\InvestimentUser\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
