--- a/ProjetoBRQ/ProjetoBRQ/packages.config
+++ b/ProjetoBRQ/ProjetoBRQ/packages.config
@@ -4,6 +4,7 @@
   <package id="bootstrap" version="3.0.0" targetFramework="net452" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
   <package id="jQuery" version="3.2.1" targetFramework="net452" />
+  <package id="JQuery.MoneyMask" version="1.0.3.1" targetFramework="net452" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net452" />
   <package id="JQuery-Mask-Plugin" version="1.5.3-r2" targetFramework="net452" />
   <package id="Microsoft.ApplicationInsights" version="2.2.0" targetFramework="net452" />
@@ -57,5 +58,6 @@
   <package id="Oracle.ManagedDataAccess.EntityFramework" version="12.2.1100" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net452" />
   <package id="Respond" version="1.2.0" targetFramework="net452" />
+  <package id="WebActivatorEx" version="2.0.5" targetFramework="net452" />
   <package id="WebGrease" version="1.5.2" targetFramework="net452" />
 </packages>
